<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">View contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_add_contact">Add contact</string>
    <string name="title_activity_add_contact">Add contact</string>
    <string name="name_input_label">Name:</string>
    <string name="number_input_label">Number:</string>
    <string name="key_input_label">Key:</string>
    <string name="name_input_field">Name</string>
    <string name="number_input_field">Phone number</string>
    <string name="key_input_field">Public key</string>
    <string name="add_new_contact_button">Add</string>
    <string name="title_activity_view_messages">View messages</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_submit_button">Submit</string>
    <string name="register_title_text">Register details</string>
    <string name="register_name">Name</string>
    <string name="register_password_one">Password</string>
    <string name="register_password_two">Repeat password</string>
    <string name="register_phone_input">Phone number</string>

</resources>
