<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.twizted.secmsg.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_title_text"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/registerName"
        android:hint="@string/register_name"
        android:autoText="false"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/registerPasswordOne"
        android:hint="@string/register_password_one"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerName"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_submit_button"
        android:id="@+id/registerSubmitButton"
        android:onClick="registerMe"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/registerNumber"
        android:hint="@string/register_phone_input"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerPasswordOne"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
